<?xml version="1.0"?>
<package format="3">
  <name>grip</name>
  <version>0.0.7</version>
  <description>grip is a library for Robot Grasp Learning Environments.</description>
  <maintainer email="ermano.arruda@gmail.com">Ermano Arruda</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/eaa3/grip.git</url>

  <exec_depend>rclpy</exec_depend>

  <depend>image_pipeline</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>moveit_resources_panda_description</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>robotiq_140_description</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>python3-pybullet-pip</exec_depend>
  <exec_depend>python3-open3d-pip</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-trimesh-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
