[project]
name = "gripx"
version = "0.0.13"
description = "Grip is a prototyping toolbox for manipulation research."
readme = "README.md"
requires-python = ">=3.7,<3.13"
authors = [
    {name = "Ermano Arruda", email = "ermano.arruda@gmail.com"}
]
dependencies = [
    "setuptools>=69.0.0",
    "numpy>=1.25.2,<=1.26.4",
    "scipy>=1.11.1",
    "pybullet>=3.2.6",
    "open3d>=0.10.0",
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.3.4",
    "pybullet-planning-eaa",
    "trimesh>=3.9.20",
    "xatlas>=0.0.7",
    "transforms3d>=0.4.1",
    "strenum",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
    "black>=25.1.0",
    "check-manifest>=0.49,<=0.49",
    "pre-commit>=3.3.3,<=3.3.3",
    "pylint>=2.16,<=2.17.5",
    "pytest-cov>=4.1,<=4.1",
    "pytest-mock>=3.10,<=3.11.1",
    "pytest-runner<=6.0,>=6.0",
    "pytest>=7.4,<=7.4",
    "hypothesis>=6.82,<=6.82.2",
    "ruff>=0.0.28,<=0.0.28",
    "coverage>=7.2.7,<=7.3.0",
    "sphinx",]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
select = [
  "F", # pyflakes
  "E",
  "W", # pycodestyle
  # flake8-annotations
  "ANN001", # missing-type-function-argument
  "ANN201", # missing-return-type-public-function
  "ANN205", # missing-return-type-static-method
  "ANN401", # any-type
  "S",      # flake8-bandit
  "Q",      # flake8-quotes
  "B",      # flake8-bugbear
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "I",      # isort
  "N",      # pep8-naming
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "PL",     # pylint
]
ignore = [
  "PLR0913", # too-many-arguments
  "N812",
  "S101",
  "B006",
  "B905",    # zip-without-explicit-strict
  "PLR2004", # magic-value-comparison
  "D105",    # undocumented-magic-method
  "PLR0912", # too-many-branches
  "PLR0915", # too-many-statements
  "F821",    # undefined-name
  "PLW2901", # redefined-loop-name
  "E711",    # none-comparison
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"test/*" = ["ANN", "S101", "D"]

[tool.pylint]
extension-pkg-whitelist = ["numpy", "scipy"]
jobs = 16                                    #detect number of cores
ignored-modules = ["rclpy", 
                  "rclpy.callback_groups", 
                  "cv_bridge", 
                  "launch_ros", 
                  "cv2", 
                  "std_msgs", 
                  "geometry_msgs", 
                  "sensor_msgs", 
                  "pybullet", 
                  "ros2topic.api", 
                  "launch", 
                  "tf2_ros", 
                  "control_msgs", 
                  "open3d",
                  "message_filters",
                  "ament_index_python.packages",
                  "urdf_parser_py"]

[tool.pylint.'MESSAGES CONTROL']
disable = "W0631,W0603,W0221,W0102,C,logging-fstring-interpolation,line-too-long,fixme,broad-exception-caught,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,cyclic-import,duplicate-code,too-many-public-methods,too-many-nested-blocks"
enable = "no-else-return,consider-using-in"
